# Proof-Of-Concept

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  SimpleModel.ipynb  pyproject.toml  temp_gitignore.txt
.ipynb_checkpoints/: SimpleModel-checkpoint.ipynb
19/: 19_179818_262775.jpg:Zone.Identifier
poc/: config.py  dataset.py  model.py  train.py
tests/: test_model.py  test_poc.py  test_train.py
wandb/: latest-run
wandb/run-20260428_233848-uk9p1sdp/: run-uk9p1sdp.wandb
wandb/run-20260428_233848-uk9p1sdp/files/: config.yaml  requirements.txt  wandb-metadata.json  wandb-summary.json
