[project]
name = "poc"
dynamic = ["version"]
description = ""
requires-python = ">=3.10,<3.13"
authors = [
    { name = "Awwal Balogun" },
    { name = "Jean-François Reboud", email = "jeanfrancois.reboud.gre@gmail.com" },
]

dependencies = [
    "numpy>=1.26.4,<3.0.0",
    "torch>=2.4.0,<3.0.0",
    "typer>=0.12.3,<1.0.0",
    "tqdm>=4.66.4,<5.0.0",
    "loguru>=0.7.2,<1.0.0",
    "pydantic>=2.11.3,<3.0.0",
    "pillow>=11.2.1,<12.0.0",
    "torchvision>=0.22.0,<1.0.0",
    "matplotlib>=3.10.8,<4.0.0",
    "fastai>=2.8.6,<3.0.0",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=4.0.0,<5.0.0",
    "ruff>=0.8.3,<1.0.0",
    "pytest>=8.3.5,<9.0.0",
]

[tool.setuptools]
packages = ["poc", "scripts"]

[tool.mypy]
plugins = [
    "pydantic.mypy"
]
ignore_missing_imports = true

[tool.ruff]
preview = true
line-length = 80

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = [
    "I", # isort
]
extend-select = [
    "D", # pydocstyle
    "E", # pycodestyle
    "W", # pycodestyle
    "F", # pyflakes
    "N", # pep8-naming
    "UP", # pyupgrade
    "B", # bugbear
    "FURB", # refurb
    "RET", # flake8-return
]
ignore = [
    "E501", # Line too long
    "PERF203", # `try`-`except` within a loop incurs performance overhead
    "D100", "D101", "D102", "D103", "D104", "D105", "D107", # Missing docstrings,
    "D200", "D205", "D401", "D404", "D400",
    "RET504",
    "N812", "N806",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["D", "F401"]  # Unused import
"tests/*" = ["S101"]  # Use of assert detected

[tool.ruff.lint.pydocstyle]
convention = "numpy"  # Accepts: "google", "numpy", or "pep257".
